--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <!--navigation-->
     <!--destop-->
     <nav
-      class=" md:block sm:hidden mt-7 max-w-[1326px]  mx-auto flex flex-row items-center justify-between font-normal text-base text-black">
+      class=" mt-7 max-w-[1326px]  mx-auto flex flex-row items-center justify-between font-normal text-base text-black">
       <div class="group"><a href="#" class="group-hover:text-[#FF6F61] transition-[5ms]">Jewelry & Accessories</a></div>
       <div class="group"><a href="#" class="group-hover:text-[#FF6F61] transition-[5ms]">Clothing & Shoes</a></div>
       <div class="group"><a href="#" class="group-hover:text-[#FF6F61] transition-[5ms]">Home & Living</a></div>
@@ -47,7 +47,7 @@
       
     </nav>
     <!--mobile-->
-    <nav class="sm:block">
+    <nav class="hidden">
       <div class=" cursor-pointer px-3 flex flex-row justify-end"><img src="icon/menu.svg" alt="" class="w-12 h-12"></div>
     </nav>
 
